some fixes, redesigned menu on mobile devices

--- a/css/project_template.css
+++ b/css/project_template.css
@@ -24,88 +24,140 @@ body {
     background-color: #EBEBEB;
   }
 
-  nav {
+  /*Navigation bar*/
+nav {
     display: flex;
     padding: 2% 4%;
     justify-content: space-between;
     align-items: center;
-  }
-  .nav-links {
+}
+
+.nav-links {
     flex: 1;
     text-align: right;
-  }
-  .nav-links ul {
+}
+
+.nav-links ul {
     list-style: none;
-  }
-  .nav-links ul li {
+}
+
+.nav-links ul li {
     display: inline-block;
     padding: 8px 12px;
     position: relative;
-  }
-  .nav-links ul li a {
-    color: #0b1215;
+}
+
+.nav-links ul li a {
+    color: #fff;
     text-decoration: none;
-    font-size: 18px;
-  }
-  .nav-links ul li::after {
+    font-size: 26px;
+}
+
+.nav-links ul li::after {
     content: '';
     width: 0;
     height: 2px;
-    background: #490B84;
+    background: #3C096C;
     display: block;
     margin: auto;
     transition: 0.5s;
-  }
-  .nav-links ul li:hover::after {
-    width: 100%;
-  }
-  nav .fa {
-    display: none;
-  }
+}
 
-  /* Мobile style for navigation */
-  @media (max-width: 700px) {
+.nav-links ul li:hover::after {
+    width: 100%;
+}
+
+nav .fa {
+    display: none;
+}
+
+
+.text-box h1 {
+    font-size: 62px;
+}
+
+/*Navigation bar properties for mobile devices*/
+@media (max-width: 700px) {
     .nav-links ul li {
-      display: block;
-      background-color: #490B84;
+        display: block;
     }
+
     .nav-links {
-      position: fixed;
-      background: #490B84;
-      height: 100vh;
-      width: 100%;
-      top: 0;
-      right: -100%;
-      text-align: left;
-      z-index: 1000;
-      transition: 0.5s;
-      opacity: 0.9;
+        position: fixed;
+        background: #3C096C;
+        height: 100vh;
+        width: 100%;
+        top: 0;
+        right: -100%;
+        z-index: 2;
+        transition: 0.5s;
+        opacity: 0.97;
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: left;
     }
+
     .nav-links ul {
-      padding: 30px;
-      background-color: #490B84;
+        padding: 30px;
+        list-style: none;
+        margin-bottom: 30px;
+        flex-direction: column;
+        justify-content: center;
+        text-align: left;
     }
+   
+
     nav .fa {
-      display: block;
-      color: #fff;
-      margin: 10px;
-      font-size: 22px;
-      cursor: pointer;
-      color: #0b1215;
+        display: block;
+        color: #0b1215;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+        
+    }
+
+    .text-box h1 {
+        font-size: 28px;
     }
     .nav-links .fa-close {
-      color: #fff;
-      background-color: #490B84;
+        position: absolute; /* Абсолютное позиционирование */
+        top: 20px; /* Отступ сверху */
+        right: 20px; /* Отступ справа */
+        color: #fff;
+        font-size: 24px;
+        cursor: pointer;
+        z-index: 3; /* Поверх остального контента */
     }
-    .text-box h1 {
-      font-size: 20px;
-      background-color: #490B84;
+
+    /* Контакты под меню */
+    .nav-contacts {
+        margin-top: 40px; /* Отступ от меню */
+        text-align: center;
     }
-    .nav-links ul li a {
-      color: #fff; 
-      background-color: #490B84;
+
+    .nav-contacts p {
+        margin: 5px 0;
+        font-size: 16px;
+        color: #fff;
     }
-  }
+
+    .nav-contacts a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 18px !important;
+    }
+
+    .nav-contacts a:hover {
+        text-decoration: underline;
+    }
+    .nav-links li a{
+        font-size: 20px;
+    }
+
+    
+}
   /* Top left side logo */
   a.top-logo {
     text-decoration: none;
